# rv

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  metadata.rs
src/cli/: chpwd.rs  clear.rs  get.rs  list.rs  mod.rs  precmd.rs  set.rs  show.rs
