[package]
name = "rv"
version = "0.1.0"
edition = "2021"
description = "Tool for flexibly managing environment variable profiles"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
